--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,12 @@ android {
         applicationId "com.softwareoverflow.cookingtimer"
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 6
+        versionCode 26
         versionName "1.0.0"
     }
     buildTypes {
         release {
+            debuggable false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -24,10 +25,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.google.android.gms:play-services-ads:9.4.0'
+    compile 'com.google.android.gms:play-services-ads:9.6.1'
     compile 'com.google.code.gson:gson:2.5'
-    compile 'com.google.android.gms:play-services-appindexing:9.4.0'
-    compile 'com.google.firebase:firebase-core:9.2.1'
+    compile 'com.google.android.gms:play-services-appindexing:9.6.1'
+    compile 'com.google.firebase:firebase-core:9.0.1'
+    compile 'com.google.firebase:firebase-ads:9.6.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
